Modified tracking methods response models
